objects/customTFPortalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings used by the 2cloudnine Trialforce Custom Portal</description>
    <label>2c9 Employee Portal Settings</label>
    <fields>
        <fullName>Use_Echosign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if enabled the Portal will look for echosign agreements on Payee or Placement objects and complete any necessary logic.</description>
        <inlineHelpText>if enabled the Portal will look for echosign agreements on Payee or Placement objects and complete any necessary logic.</inlineHelpText>
        <label>Use Echosign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Colour__c</fullName>
        <description>this is the main colour for the Portal Logo Bar</description>
        <inlineHelpText>this is the main colour for the Portal Logo Bar</inlineHelpText>
        <label>Primary Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Colour__c</fullName>
        <description>this is the colour for the sideBar menu highlight</description>
        <inlineHelpText>this is the colour for the sideBar menu highlight</inlineHelpText>
        <label>Tertiary Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Colour__c</fullName>
        <description>this is the colour for the sideBar background</description>
        <inlineHelpText>this is the colour for the sideBar background</inlineHelpText>
        <label>Secondary Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressAutocompleteGoogleKey__c</fullName>
        <description>Your Google API Key, used to authenticate with Google server.</description>
        <inlineHelpText>Your Google API Key, used to authenticate with Google server.</inlineHelpText>
        <label>AddressAutocompleteGoogleKey__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>